--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -4,16 +4,16 @@
   <title>Spring Security Example </title>
 </head>
 <body>
-<div th:if="${param.error}">
+<div th:if="${param.error}" style="color: red">
   Invalid username and password.
 </div>
-<div th:if="${param.logout}">
+<div th:if="${param.logout}" style="color: hotpink">
   You have been logged out.
 </div>
-<form th:action="@{/auth/login}" method="post">
-  <div><label> User Name : <input type="text" name="username"/> </label></div>
-  <div><label> Password: <input type="password" name="password"/> </label></div>
-  <div><input type="submit" value="Sign In"/></div>
+<form action="/process_login" name="f" method="post">
+  <div><label> User Name : <input type="text" name="username" id="username"/> </label></div>
+  <div><label> Password: <input type="password" name="password" id="password"/> </label></div>
+  <div><input type="submit" value="Login"/></div>
 </form>
 </body>
 </html>
