implement registration and auto authenticate

--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -145,9 +145,11 @@
   <div><label> Email <input type="text" placeholder="Email" name="username" id="username"/> </label></div>
   <div><label> Password <input type="password" name="password" id="password" placeholder="Password"/> </label></div>
   <button type="submit" value="Login">Login</button>
+  <a href="auth/registration">Registration</a>
   <div th:if="${param.error}" style="color: red">
     Invalid username and password.
   </div>
 </form>
+
 </body>
 </html>
