--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
         .sidebar {
             background-color: #e9ecef;
             border-right: 1px solid #ccc;
-            height: calc(100vh - 60px); /* Высота минус высота хедера */
+            height: calc(100vh - 60px);
             padding-top: 20px;
         }
         .main-content {
@@ -25,14 +25,14 @@
         /* Общий контейнер для форм */
         .upload-container {
             display: flex;
-            justify-content: center; /* Центрируем формы по горизонтали */
-            gap: 20px; /* Отступ между формами */
+            justify-content: center;
+            gap: 40px;
+            margin-top: 20px;
         }
 
-        /* Стили для областей загрузки */
         .drop-zone {
-            max-width: 200px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             padding: 25px;
             display: flex;
             align-items: center;
@@ -67,13 +67,11 @@
             border-color: #0d6efd;
         }
 
-        /* Кнопка загрузки */
         .upload-button {
             margin-top: 10px;
-            width: 100%; /* Занимает всю ширину родительского блока */
+            width: 100%;
         }
 
-        /* Тумбнейл для выбранного файла */
         .drop-zone__thumb {
             width: 100%;
             height: 100%;
@@ -95,6 +93,56 @@
             background: rgba(0, 0, 0, 0.75);
             font-size: 14px;
             text-align: center;
+        }
+
+        .cards-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .card {
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            text-align: center;
+            background-color: #fff;
+            transition: transform 0.2s ease-in-out;
+            width: 240px;
+            height: 280px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .card:hover {
+            transform: scale(1.05);
+        }
+        .card-title {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .card-text {
+            font-size: 14px;
+            color: #6c757d;
+            margin-bottom: 10px;
+        }
+        .card svg {
+            width: 32px;
+            height: 32px;
+            margin-bottom: 8px;
+            color: #007bff;
+        }
+        .btn {
+            font-size: 12px;
+            padding: 5px 10px;
+        }
+        .btn svg {
+            width: 14px;
+            height: 14px;
+            fill: white;
         }
     </style>
 </head>
@@ -158,17 +206,39 @@
         </div>
         <!-- Main Section -->
         <div class="col-md-10 main-content">
+            <h2>Файлы(скоро здесь breadcrumb будет)</h2>
             <div class="row justify-content-center">
-                <!-- Files Display Block -->
-                <div class="col-12 mb-4">
+                <div th:each="file : ${files}" class="col-md-3 col-sm-6">
                     <div class="card">
-                        <div class="card-header">Файлы</div>
-                        <div class="card-body">
-                            <!-- Здесь будут отображаться файлы -->
-                            <p>Список файлов будет загружен здесь.</p>
+                        <div>
+                            <div th:if="${file.getFullPath().endsWith('/')}" class="icon-folder">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
+                                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31z"/>
+                                </svg>
+                            </div>
+                            <div th:unless="${file.getFullPath().endsWith('/')}" class="icon-file">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-file-earmark" viewBox="0 0 16 16">
+                                    <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5z"/>
+                                </svg>
+                            </div>
+                        </div>
+                        <h4 th:text="${file.getShortName()}" class="card-title">Имя файла</h4>
+                        <p th:text="${file.getFullPath()}" class="card-text">Путь к файлу</p>
+                        <div class="d-flex justify-content-around">
+                            <a href="#" class="btn btn-danger">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
+                                </svg>
+                            </a>
+                            <a href="#" class="btn btn-primary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                                    <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
+            </div>
                 <!-- Upload Forms Container -->
                 <div class="col-12">
                     <div class="upload-container">
@@ -193,7 +263,6 @@
             </div>
         </div>
     </div>
-</div>
 <script>
     document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
         const dropZoneElement = inputElement.closest(".drop-zone");
@@ -248,7 +317,7 @@
             const reader = new FileReader();
             reader.readAsDataURL(file);
             reader.onload = () => {
-                thumbnailElement.style.backgroundImage = `url('${reader.result}')`;
+                thumbnailElement.style.backgroundImage = url('${reader.result}');
             };
         } else {
             thumbnailElement.style.backgroundImage = null;
