--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -253,6 +253,16 @@
                                     </button>
                                 </form>
                             </div>
+                            <div th:unless="${!file.getFullPath().endsWith('/')}" class="icon-folder">
+                                <form th:action="@{/deleteFolder}" method="post">
+                                    <input type="hidden" name="folderPath" th:value="${file.getFullPath()}"/>
+                                    <button type="submit" class="btn btn-danger">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                            <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5"/>
+                                        </svg>
+                                    </button>
+                                </form>
+                            </div>
 
                             <div th:if="${!file.getFullPath().endsWith('/')}" class="icon-folder">
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#renameModal"
