--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -272,6 +272,15 @@
                                     </svg>
                                 </button>
                             </div>
+                            <div th:if="${file.getFullPath().endsWith('/')}">
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#renameFolderModal"
+                                        th:attr="data-full-path=${file.getFullPath()}, data-short-name=${file.getShortName()}">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                                        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                                    </svg>
+                                </button>
+                            </div>
+
                         </div>
                     </div>
 
@@ -312,6 +321,47 @@
 
                                 fullPathInput.value = fullPath; // Set full path in hidden input
                                 newNameInput.value = shortName; // Pre-fill new name with current file name
+                            });
+                        });
+                    </script>
+                    <!-- Modal for Renaming Folders -->
+                    <div class="modal fade" id="renameFolderModal" tabindex="-1" aria-labelledby="renameFolderModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="renameFolderModalLabel">Переименовать папку</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <form id="renameFolderForm" th:action="@{/renameFolder}" method="post">
+                                    <div class="modal-body">
+                                        <input type="hidden" id="folderPath" name="fullPath" value=""/>
+                                        <label for="newFolderName" class="form-label">Новое имя папки:</label>
+                                        <input type="text" class="form-control" id="newFolderName" name="newName" required/>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                                        <button type="submit" class="btn btn-primary">Переименовать</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <script>
+                        // JavaScript to populate modal fields for renaming folders
+                        document.addEventListener('DOMContentLoaded', function () {
+                            const renameFolderModal = document.getElementById('renameFolderModal');
+                            renameFolderModal.addEventListener('show.bs.modal', function (event) {
+                                const button = event.relatedTarget; // Button that triggered the modal
+                                const fullPath = button.getAttribute('data-full-path'); // Get full path from button attribute
+                                const shortName = button.getAttribute('data-short-name'); // Get short name from button attribute
+
+                                // Populate modal fields
+                                const fullPathInput = renameFolderModal.querySelector('#folderPath');
+                                const newNameInput = renameFolderModal.querySelector('#newFolderName');
+
+                                fullPathInput.value = fullPath; // Set full path in hidden input
+                                newNameInput.value = shortName; // Pre-fill new name with current folder name
                             });
                         });
                     </script>
