--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -146,43 +146,56 @@
         }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center bg-gray-100">
+<body class="d-flex flex-column min-vh-100 bg-light">
+<header class="header bg-light py-2">
+    <nav class="navbar navbar-expand-lg navbar-light container-fluid">
+        <div class="container-fluid">
+            <!-- Логотип -->
+            <a class="navbar-brand" th:href="@{/hello}">
+                Cloud Storage
+            </a>
 
-<header class="header bg-light py-2 mb-3">
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" th:href="@{/hello}">Cloud Storage</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/hello}">Главная</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Ваши файлы</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Имя пользователя
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                                <li><a class="dropdown-item" href="#">Профиль</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+            <!-- Тoggler для мобильной версии -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Меню навигации -->
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                <!-- Левая часть меню -->
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/hello}">Главная</a>
+                    </li>
+                </ul>
+
+                <!-- Поисковая форма -->
+                <form class="d-flex ms-auto" th:action="@{/search}" method="GET">
+                    <input type="text" class="form-control me-2" placeholder="Поиск файла или папки" aria-label="Search" aria-describedby="button-addon2" th:value="${query}" name="query">
+                    <button class="btn btn-primary" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                        </svg>
+                    </button>
+                </form>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" th:text="${User.getUsername()}" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Пользователь
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                            <li>
+                                <form th:action="@{/auth/logout}" method="post">
+                                    <button type="submit" class="dropdown-item">Выход</button>
+                                </form>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
 </header>
-
 <script>
     document.getElementById('menu-toggle').addEventListener('click', function () {
         document.getElementById('mobile-menu').classList.toggle('hidden');
@@ -190,23 +203,8 @@
 </script>
 <div class="container-fluid">
     <div class="row">
-        <!-- Sidebar -->
-        <div class="col-md-2 sidebar">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/hello}">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Ваши файлы</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Поиск</a>
-                </li>
-            </ul>
-        </div>
-        <!-- Main Section -->
-        <div class="col-md-10 main-content">
-            <nav aria-label="breadcrumb">
+        <div class="col-md-12 main-content">
+            <nav aria-label="breadcrumb text-center">
                 <ol class="breadcrumb">
                     <li th:each="link : ${chain}" class="breadcrumb-item" th:classappend="${link.getParentReference() == currentPath} ? 'active' : ''">
                         <span th:if="${link.getParentReference() == currentPath}" th:text="${link.getName()}"></span>
@@ -217,7 +215,7 @@
                     </li>
                 </ol>
             </nav>
-            <div class="row justify-content-center">
+            <div class="row justify-content-evenly">
                 <div th:each="file : ${files}" class="col-md-3 col-sm-6">
                     <div class="card">
                         <div>
