--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -241,8 +241,9 @@
                         <div class="d-flex justify-content-around">
                             <div th:if="${!file.getFullPath().endsWith('/')}" class="icon-folder">
                                 <form th:action="@{/deleteFile}" method="post">
-                                    <input type="hidden" name="fullPath" th:value="${file.getFullPath()}"/>
-                                    <button type="submit" class="btn btn-danger">
+                                    <input type="hidden" name="fullPath" th:value="${file.fullPath}" />
+                                    <button type="submit" class="btn btn-danger"
+                                            th:disabled="${!file.fullPath.startsWith(rootFolderPath)}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                                             <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5"/>
                                         </svg>
@@ -263,7 +264,8 @@
                             <div th:unless="${!file.getFullPath().endsWith('/')}" class="icon-folder">
                                 <form th:action="@{/deleteFolder}" method="post">
                                     <input type="hidden" name="folderPath" th:value="${file.getFullPath()}"/>
-                                    <button type="submit" class="btn btn-danger">
+                                    <button type="submit" class="btn btn-danger"
+                                            th:disabled="${!file.fullPath.startsWith(rootFolderPath)}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
                                             <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5"/>
                                         </svg>
@@ -272,7 +274,7 @@
                             </div>
 
                             <div th:if="${!file.getFullPath().endsWith('/')}" class="icon-folder">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#renameModal"
+                                <button type="button" class="btn btn-primary" th:disabled="${!file.fullPath.startsWith(rootFolderPath)}" data-bs-toggle="modal" data-bs-target="#renameModal"
                                         th:attr="data-full-path=${file.getFullPath()}, data-short-name=${file.getShortName()}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                                         <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
@@ -280,7 +282,7 @@
                                 </button>
                             </div>
                             <div th:if="${file.getFullPath().endsWith('/')}">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#renameFolderModal"
+                                <button type="button" class="btn btn-primary" th:disabled="${!file.fullPath.startsWith(rootFolderPath)}" data-bs-toggle="modal" data-bs-target="#renameFolderModal"
                                         th:attr="data-full-path=${file.getFullPath()}, data-short-name=${file.getShortName()}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                                         <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
