--- a/demo/src/main/resources/templates/search.html
+++ b/demo/src/main/resources/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Storage</title>
+    <title>Search</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Стили для отделения элементов */
@@ -202,22 +202,8 @@
     });
 </script>
 <div class="container-fluid">
-    <div th:if="${errorMessage != null}" class="alert alert-danger">
-        <p th:text="${errorMessage}"></p>
-    </div>
     <div class="row">
         <div class="col-md-12 main-content">
-            <nav aria-label="breadcrumb text-center">
-                <ol class="breadcrumb">
-                    <li th:each="link : ${chain}" class="breadcrumb-item" th:classappend="${link.getParentReference() == currentPath} ? 'active' : ''">
-                        <span th:if="${link.getParentReference() == currentPath}" th:text="${link.getName()}"></span>
-
-                        <a th:if="${link.getParentReference() != currentPath}"
-                           th:href="@{/(path=${link.getParentReference()})}"
-                           th:text="${link.getName()}"></a>
-                    </li>
-                </ol>
-            </nav>
             <div class="row justify-content-evenly">
                 <div th:each="file : ${files}" class="col-md-3 col-sm-6">
                     <div class="card">
@@ -379,30 +365,6 @@
                     </script>
                 </div>
             </div>
-            <div class="col-12">
-                <div class="upload-container">
-                    <!-- Form for Uploading Files -->
-                    <form method="post" th:action="@{/uploadFile}" enctype="multipart/form-data" class="upload-form">
-                        <div class="drop-zone file-drop-zone">
-                            <span class="drop-zone__prompt">Перетащите файл или нажмите для загрузки</span>
-                            <input type="hidden" id="currentFilePath" name="currentPath" th:value="${currentPath}" />
-                            <input type="file" name="file" accept=".doc,.docx,.pdf,.jpeg,.png,.txt,.py,.java" class="drop-zone__input">
-                        </div>
-                        <button type="submit" class="btn btn-primary upload-button" disabled>Загрузить файл</button>
-                    </form>
-
-                    <!-- Form for Uploading Folders -->
-                    <form method="post" th:action="@{/uploadFolder}" enctype="multipart/form-data" class="upload-form">
-                        <div class="drop-zone folder-drop-zone">
-                            <span class="drop-zone__prompt">Перетащите папку или нажмите для загрузки</span>
-                            <input type="hidden" id="currentFolderPath" name="currentPath" th:value="${currentPath}" />
-                            <input type="file" name="files" webkitdirectory directory multiple accept=".doc,.docx,.pdf,.jpeg,.png" class="drop-zone__input">
-                        </div>
-                        <button type="submit" class="btn btn-primary upload-button" disabled>Загрузить папку</button>
-                    </form>
-                </div>
-            </div>
-
             <script>
                 document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
                     const dropZoneElement = inputElement.closest(".drop-zone");
@@ -509,7 +471,7 @@
                     dropZoneElement.appendChild(promptElement);
                 }
             </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
